# docker-minio-error-reproduction

./: .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
docker_minio_error_reproduction/: __main__.py  lib.py
