[tool.poetry]
name = "docker-minio-error-reproduction"
version = "0.1.0"
description = ""
authors = ["Alexander Buck <abuck@spear.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3-stubs = {version = "^1.34.30", extras = ["s3"]}
boto3 = "^1.34.30"
numpy = "^1.26.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
